点击listview跳转到相应联系人信息界面

--- a/2/app/src/main/AndroidManifest.xml
+++ b/2/app/src/main/AndroidManifest.xml
@@ -16,6 +16,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:label="@string/app_name"
+            android:name=".Person" >
+            <intent-filter >
+                <action android:name="android.intent.action.layout_zk1" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
     </application>
 
 </manifest>
